--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
             <a href="index.html"><img src="imgs/logo.svg" alt="logo" class="logo"></a>
             <nav>
                 <ul>
-                    <li><a href="/">Преимущества</a></li>
-                    <li><a href="/">Каталог</a></li>
-                    <li><a href="/">О компании</a></li>
-                    <li><a href="/">Контакты</a></li>
+                    <li><a href="#benefits">Преимущества</a></li>
+                    <li><a href="#catalog">Каталог</a></li>
+                    <li><a href="#about">О компании</a></li>
+                    <li><a href="#contacts">Контакты</a></li>
                 </ul>
             </nav>
-            <button type="button" class="btn-1 py-3 fs-13 fw-6">Связаться с нами</button>
-            <button type="button" class="d-lg-none"><img src="imgs/icons/burger.svg" alt="menu"></button>
+            <button type="button" class="d-none d-sm-block btn-1 py-3 fs-13 fw-6">Связаться с нами</button>
+            <button type="button" data-bs-toggle="offcanvas" data-bs-target="#menu" class="d-lg-none"><img src="imgs/icons/burger.svg" alt="menu"></button>
         </div>
     </header>
 
@@ -34,8 +34,8 @@
                     <h1>Ремонт бытовой техники</h1>
                     <img src="imgs/main.png" alt="Ремонт бытовой техники">
                 </div>
-                <div class="benefits">
-                    <ul class="list-unstyled row row-cols-2 row-cols-lg-4 g-4">
+                <div id="benefits" class="benefits">
+                    <ul class="list-unstyled row row-cols-md-2 row-cols-lg-4 g-2 g-sm-4">
                         <li>
                             <div class="box">
                                 <img src="imgs/img-1.png" alt="Бесплатный выезд
@@ -65,9 +65,9 @@
                 </div>
             </section>
 
-            <section class="sec-2 mb-8">
+            <section id="catalog" class="sec-2 mb-8">
                 <h2>Каталог</h2>
-                <ul class="list-unstyled row row-cols-2 row-cols-lg-3 justify-content-center g-4">
+                <ul class="list-unstyled row row-cols-sm-2 row-cols-lg-3 justify-content-center g-4">
                     <li>
                         <figure>
                             <div class="box">
@@ -104,9 +104,9 @@
                 </ul>
             </section>
 
-            <section class="sec-3 mb-8">
+            <section id="about" class="sec-3 mb-8">
                 <h2>О компании</h2>
-                <div class="row justify-content-between g-4 mb-5">
+                <div class="row justify-content-between g-2 g-sm-4 mb-4 mb-sm-5">
                     <div class="col-lg-6 col-xl-5">
                         <h3>Lorem ipsum</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Adipiscing arcu nibh egestas mauris, adipiscing ultricies. Sagittis vestibulum in urna orci. Vitae in dui mi sed. Lectus sed facilisis at purus.</p>
@@ -116,7 +116,7 @@
                         <img src="imgs/img-8.jpg" alt="Lorem ipsum">
                     </div>
                 </div>
-                <div class="row flex-lg-row-reverse justify-content-between g-4 mb-5">
+                <div class="row flex-lg-row-reverse justify-content-between g-2 g-sm-4 mb-4 mb-sm-5">
                     <div class="col-lg-6 col-xl-5">
                         <h3>Lorem ipsum</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Adipiscing arcu nibh egestas mauris, adipiscing ultricies. Sagittis vestibulum in urna orci. Vitae in dui mi sed. Lectus sed facilisis at purus.</p>
@@ -126,7 +126,7 @@
                         <img src="imgs/img-9.jpg" alt="Lorem ipsum">
                     </div>
                 </div>
-                <div class="row justify-content-between g-4 mb-5">
+                <div class="row justify-content-between g-2 g-sm-4 mb-4 mb-sm-5">
                     <div class="col-lg-6 col-xl-5">
                         <h3>Lorem ipsum</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Adipiscing arcu nibh egestas mauris, adipiscing ultricies. Sagittis vestibulum in urna orci. Vitae in dui mi sed. Lectus sed facilisis at purus.</p>
@@ -140,7 +140,7 @@
 
             <section class="sec-4 mb-8">
                 <h2 class="text-center">Бренды, с которыми мы работаем</h2>
-                <ul class="list-unstyled row row-cols-4 g-4">
+                <ul class="list-unstyled row row-cols-2 row-cols-sm-4 g-4">
                     <li>
                         <img src="imgs/brands/brand-1.png" alt="brand-1">
                     </li>
@@ -168,19 +168,19 @@
                 </ul>
             </section>
 
-            <section class="sec-5 mb-5">
+            <section id="contacts" class="sec-5 mb-4 mb-sm-5">
                 <img src="imgs/bg/pattern.svg" alt="pattern" class="bg-1">
                 <img src="imgs/bg/man.png" alt="man" class="bg-2">
                 <div class="row">
-                    <div class="col-8 col-lg-6 col-xxl-5">
+                    <div class="col-md-8 col-lg-6 col-xxl-5">
                         <h2>Заголовок формы</h2>
                         <form action="">
-                            <h4 class="text-start fw-7 mb-4">Lorem ipsum dolor</h4>
-                            <input type="text" placeholder="Lorem" class="fs-13 mb-3">
-                            <input type="tel" placeholder="Lorem" class="fs-13 mb-3">
-                            <input type="email" placeholder="Lorem" class="fs-13 mb-3">
+                            <h4 class="text-sm-start fw-7 mb-3 mb-sm-4">Lorem ipsum dolor</h4>
+                            <input type="text" placeholder="Lorem" class="fs-13 mb-2 mb-sm-3">
+                            <input type="tel" placeholder="Lorem" class="fs-13 mb-2 mb-sm-3">
+                            <input type="email" placeholder="Lorem" class="fs-13 mb-2 mb-sm-3">
                             <button type="submit" class="btn-2 w-100 fs-13 fw-7">Lorem ipsum</button>
-                            <p class="mt-3 text-center fw-5">Отправляя данные, вы соглашаетесь с обработкой <a href="/" class="fw-7 text-decoration-underline">персональных данных</a></p>
+                            <p class="mt-2 mt-sm-3 text-center fw-5">Отправляя данные, вы соглашаетесь с обработкой <a href="/" class="fw-7 text-decoration-underline">персональных данных</a></p>
                         </form>
                     </div>
                 </div>
@@ -189,6 +189,113 @@
     </main>
 
     <footer></footer>
+    <footer class="mobile">
+        <nav class="container">
+            <ul>
+                <li>
+                    <a href="index.html"><img src="imgs/icons/mobile-home.svg" alt="home"></a>
+                </li>
+                <li>
+                    <a href="index.html"><img src="imgs/icons/mobile-logo.svg" alt="logo"></a>
+                </li>
+                <li>
+                    <button type="button" data-bs-toggle="offcanvas" data-bs-target="#mob-services">
+                        <img src="imgs/icons/mobile-services.svg" alt="services">
+                    </button>
+                </li>
+                <li>
+                    <button type="button" data-bs-toggle="offcanvas" data-bs-target="#mob-contacts">
+                        <img src="imgs/icons/mobile-contacts.svg" alt="contacts">
+                    </button>
+                </li>
+            </ul>
+        </nav>
+    </footer>
+
+    <div class="offcanvas offcanvas-top" tabindex="-1" id="menu">
+        <button type="button" class="btn-close" data-bs-dismiss="offcanvas">
+            <img src="imgs/icons/close.svg" alt="close">
+        </button>
+        <div class="offcanvas-body">
+            <div class="container">
+                <h3 class="text-center fw-7">Меню сайта</h3>
+                <nav>
+                    <ul data-bs-dismiss="offcanvas">
+                        <li><a href="#benefits">Преимущества</a></li>
+                        <li><a href="#catalog">Каталог</a></li>
+                        <li><a href="#about">О компании</a></li>
+                        <li><a href="#contacts">Контакты</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </div>
+
+    <div class="offcanvas offcanvas-bottom" tabindex="-1" id="mob-contacts">
+        <button type="button" class="btn-close" data-bs-dismiss="offcanvas">
+            <img src="imgs/icons/close.svg" alt="close">
+        </button>
+        <div class="offcanvas-body">
+            <div class="container">
+                <h3 class="text-center fw-7">Контактная информация</h3>
+                <nav>
+                    <ul data-bs-dismiss="offcanvas">
+                        <li>
+                            <a href="https://api.whatsapp.com/send?phone=79653456789" target="_blank">
+                                <img src="imgs/icons/wapp.png" alt="whatsapp">
+                                <span>+7 (965) 345-67-89</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#catalog">
+                                <img src="imgs/icons/phone.png" alt="Заказать звонок">
+                                <span>Заказать звонок</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#about">
+                                <img src="imgs/icons/address.png" alt="Показать адрес">
+                                <span>Показать адрес</span>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </div>
+
+    <div class="offcanvas offcanvas-bottom" tabindex="-1" id="mob-services">
+        <button type="button" class="btn-close" data-bs-dismiss="offcanvas">
+            <img src="imgs/icons/close.svg" alt="close">
+        </button>
+        <div class="offcanvas-body">
+            <div class="container">
+                <h3 class="text-center fw-7">Услуги</h3>
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="/">
+                                <img src="imgs/icons/washer.png" alt="washer">
+                                <span>Ремонт стиральных машин</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/">
+                                <img src="imgs/icons/dishwasher.png" alt="dishwasher">
+                                <span>Ремонт посудомоечных машин</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/">
+                                <img src="imgs/icons/fridge.png" alt="fridge">
+                                <span>Ремонт холодильников</span>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
