inner page desktop

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <section class="sec-1 mb-8">
                 <div class="main">
                     <h1>Ремонт бытовой техники</h1>
-                    <img src="imgs/main.png" alt="Ремонт бытовой техники">
+                    <img src="imgs/main.png" alt="Ремонт бытовой техники" class="main-img">
                 </div>
                 <div id="benefits" class="benefits">
                     <ul class="list-unstyled row row-cols-md-2 row-cols-lg-4 g-2 g-sm-4">
@@ -75,7 +75,7 @@
                                 <img src="imgs/icons/icon-1.svg" alt="Ремонт стиральных машин" class="icon">
                             </div>
                             <figcaption>
-                                <h3>Ремонт стиральных машин</h3>
+                                <h3><a href="washer.html" class="stretched-link">Ремонт стиральных машин</a></h3>
                             </figcaption>
                         </figure>
                     </li>
