--- a/dishwasher.html
+++ b/dishwasher.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ДоброСервис - Ремонт стиральных машин</title>
+    <title>ДоброСервис - Ремонт посудомоечных машин</title>
     <link rel="shortcut icon" href="imgs/favicon.png" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css" />
@@ -31,9 +31,9 @@
         <div class="container">
             <section class="sec-1 pb-0 mb-8">
                 <div class="main">
-                    <h1>Ремонт стиральных машин</h1>
-                    <img src="imgs/washer.jpg" alt="Ремонт стиральных машин" class="inner-img">
-                    <img src="imgs/icons/icon-1.svg" alt="icon-1" class="icon">
+                    <h1>Ремонт посудомоечных машин</h1>
+                    <img src="imgs/dishwasher.jpg" alt="Ремонт посудомоечных машин" class="inner-img">
+                    <img src="imgs/icons/icon-2.svg" alt="icon-2" class="icon">
                 </div>
             </section>
 
@@ -146,46 +146,10 @@
                 <ul class="list-unstyled row row-cols-2 g-2 g-sm-4">
                     <li>
                         <div class="box">
-                            <h3>Не включается</h3>
-                            <img src="imgs/icons/icon-on-off.png" alt="Не включается">
-                            <p>Повреждён кабель, неправильная работа эл. модулей</p>
-                            <strong>От 340 ₽</strong>
-                            <a href="/">Подробнее</a>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="box">
-                            <h3>Протекает вода</h3>
-                            <img src="imgs/icons/icon-water.png" alt="Протекает вода">
-                            <p>Износ резиновой манжеты или патрубков, неисправность помпы</p>
-                            <strong>От 340 ₽</strong>
-                            <a href="/">Подробнее</a>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="box">
-                            <h3>Не сливает</h3>
-                            <img src="imgs/icons/icon-sink.png" alt="Не сливает">
-                            <p>Неисправность помпы или датчика воды, засор</p>
-                            <strong>От 340 ₽</strong>
-                            <a href="/">Подробнее</a>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="box">
                             <h3>Не греет воду</h3>
                             <img src="imgs/icons/icon-temperature.png" alt="Не греет воду">
                             <p>Неисправность ТЭНа, температурного датчика</p>
-                            <strong>От 340 ₽</strong>
-                            <a href="/">Подробнее</a>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="box">
-                            <h3>Не отжимает</h3>
-                            <img src="imgs/icons/icon-spin.png" alt="Не отжимает">
-                            <p>Поломка двигателя, износ ремня, неисправность насоса</p>
-                            <strong>От 340 ₽</strong>
+                            <strong>От 350 ₽</strong>
                             <a href="/">Подробнее</a>
                         </div>
                     </li>
@@ -194,25 +158,61 @@
                             <h3>Не набирает воду</h3>
                             <img src="imgs/icons/icon-water2.png" alt="Не набирает воду">
                             <p>Сломался заливной клапан, неисправный датчик уровня воды</p>
-                            <strong>От 340 ₽</strong>
+                            <strong>От 400 ₽</strong>
                             <a href="/">Подробнее</a>
                         </div>
                     </li>
                     <li>
                         <div class="box">
-                            <h3>Шумит/прыгает</h3>
-                            <img src="imgs/icons/icon-noize.png" alt="Шумит/прыгает">
+                            <h3>Не сливает воду</h3>
+                            <img src="imgs/icons/icon-sink.png" alt="Не сливает воду">
+                            <p>Неисправность помпы или датчика воды, засор</p>
+                            <strong>От 400 ₽</strong>
+                            <a href="/">Подробнее</a>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="box">
+                            <h3>Шумит</h3>
+                            <img src="imgs/icons/icon-noize.png" alt="Шумит">
                             <p>Вышел из строя амортизатор, попал посторонний предмет</p>
-                            <strong>От 340 ₽</strong>
+                            <strong>От 350 ₽</strong>
                             <a href="/">Подробнее</a>
                         </div>
                     </li>
                     <li>
                         <div class="box">
-                            <h3>Не открывается дверца</h3>
-                            <img src="imgs/icons/icon-washing machine.png" alt="Не открывается дверца">
-                            <p>Неисправность устройства блокировки, обрыв провода, сломана ручка</p>
-                            <strong>От 340 ₽</strong>
+                            <h3>Отключается</h3>
+                            <img src="imgs/icons/icon-on-off.png" alt="Отключается">
+                            <p>Повреждён кабель, неправильная работа эл. модулей</p>
+                            <strong>От 400 ₽</strong>
+                            <a href="/">Подробнее</a>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="box">
+                            <h3>Протекает вода</h3>
+                            <img src="imgs/icons/icon-water.png" alt="Протекает вода">
+                            <p>Износ резиновой манжеты или патрубков, неисправность помпы</p>
+                            <strong>От 300 ₽</strong>
+                            <a href="/">Подробнее</a>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="box">
+                            <h3>Плохо моет</h3>
+                            <img src="imgs/icons/icon-dishwasher.png" alt="Плохо моет">
+                            <p>Поломка датчика температуры, неисправность ТЭНа</p>
+                            <strong>От 450 ₽</strong>
+                            <a href="/">Подробнее</a>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="box">
+                            <h3>Не сушит</h3>
+                            <img src="imgs/icons/icon-dry.png" alt="Не сушит">
+                            <p>Неисправность вентилятора, засор вентиляционного тракта</p>
+                            <strong>От 300 ₽</strong>
                             <a href="/">Подробнее</a>
                         </div>
                     </li>
@@ -223,7 +223,7 @@
         <section class="sec-7 mb-8">
             <div class="container">
                 <figure>
-                    <img src="imgs/bg/bg1.jpg" alt="неисправность">
+                    <img src="imgs/bg/bg2.jpg" alt="неисправность">
                     <figcaption>
                         <h2 class="text-start white mb-2 mb-sm-4">Не нашли свою неисправность?</h2>
                         <div class="row">
@@ -242,53 +242,53 @@
                 <h2 class="text-center white">Цены на ремонтные услуги</h2>
                 <ul>
                     <li>
-                        <div><span>Замена температурного датчика</span></div>
-                        <strong>от 270 ₽</strong>
+                        <div><span>Замена насоса</span></div>
+                        <strong>от 1 500 ₽</strong>
                         <button type="button" data-bs-toggle="modal" data-bs-target="#callback" class="btn-1">Проконсультироваться</button>
                     </li>
                     <li>
                         <div><span>Замена ТЭНа</span></div>
-                        <strong>от 350 ₽</strong>
+                        <strong>от 1 600 ₽</strong>
                         <button type="button" data-bs-toggle="modal" data-bs-target="#callback" class="btn-1">Проконсультироваться</button>
                     </li>
                     <li>
-                        <div><span>Устранение неисправности кнопки пуск/старт</span></div>
-                        <strong>от 190 ₽</strong>
+                        <div><span>Замена манжеты</span></div>
+                        <strong>от 1 050 ₽</strong>
                         <button type="button" data-bs-toggle="modal" data-bs-target="#callback" class="btn-1">Проконсультироваться</button>
                     </li>
                     <li>
-                        <div><span>Замена помпы</span></div>
-                        <strong>от 210 ₽</strong>
+                        <div><span>Ремонт модуля</span></div>
+                        <strong>от 2 400 ₽</strong>
                         <button type="button" data-bs-toggle="modal" data-bs-target="#callback" class="btn-1">Проконсультироваться</button>
                     </li>
                     <li>
-                        <div><span>Замена фильтра сливного насоса</span></div>
-                        <strong>от 150 ₽</strong>
+                        <div><span>Замена подшипников</span></div>
+                        <strong>от 2 900 ₽</strong>
                         <button type="button" data-bs-toggle="modal" data-bs-target="#callback" class="btn-1">Проконсультироваться</button>
                     </li>
                     <li>
-                        <div><span>Устранение засора</span></div>
-                        <strong>от 250 ₽</strong>
+                        <div><span>Замена сливного/наливного шланга</span></div>
+                        <strong>от 1 980 ₽</strong>
                         <button type="button" data-bs-toggle="modal" data-bs-target="#callback" class="btn-1">Проконсультироваться</button>
                     </li>
                     <li>
-                        <div><span>Устранение неисправности сливного клапана</span></div>
-                        <strong>от 210 ₽</strong>
+                        <div><span>Чистка фильтра подачи воды</span></div>
+                        <strong>от 1 970 ₽</strong>
                         <button type="button" data-bs-toggle="modal" data-bs-target="#callback" class="btn-1">Проконсультироваться</button>
                     </li>
                     <li>
-                        <div><span>Замена датчика уровня воды</span></div>
-                        <strong>от 250 ₽</strong>
+                        <div><span>Замена/ремонт поддона</span></div>
+                        <strong>от 2 780 ₽</strong>
                         <button type="button" data-bs-toggle="modal" data-bs-target="#callback" class="btn-1">Проконсультироваться</button>
                     </li>
                     <li>
-                        <div><span>Замена заливного клапана</span></div>
-                        <strong>от 270 ₽</strong>
+                        <div><span>Замена конденсатора</span></div>
+                        <strong>от 2 180 ₽</strong>
                         <button type="button" data-bs-toggle="modal" data-bs-target="#callback" class="btn-1">Проконсультироваться</button>
                     </li>
                     <li>
-                        <div><span>Устранение неисправности заливного тракта</span></div>
-                        <strong>от 190 ₽</strong>
+                        <div><span>Ремонт насоса</span></div>
+                        <strong>от 2 580 ₽</strong>
                         <button type="button" data-bs-toggle="modal" data-bs-target="#callback" class="btn-1">Проконсультироваться</button>
                     </li>
                 </ul>
@@ -360,7 +360,7 @@
                             <p class="fw-5 mt-3">Отправляя данные, вы соглашаетесь с обработкой <a href="/" class="text-decoration-underline fw-7">пернсональных данных</a></p>
                         </div>
                     </div>
-                    <img src="imgs/washer-img.png" alt="washer" class="img-item">
+                    <img src="imgs/dishwasher-img.png" alt="washer" class="img-item">
                 </form>
             </div>
         </section>
